--- a/src/SilexMarkdown/views/layout.html.twig
+++ b/src/SilexMarkdown/views/layout.html.twig
@@ -19,9 +19,9 @@
             {% include ('common/header.html.twig') %}
 
             <div id="main" role="main" class="container span8 offset4">
-                
+
                 {% block content %}
-                    
+
                     <h1>Documentation</h1>
 
                 {% endblock %}
@@ -32,8 +32,8 @@
 
         </div> <!--! /#main-container -->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ app.request.basepath }}/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="{{ app.request.basepath }}/assets/js/jquery.js/"><\/script>')</script>
         <script src="{{ app.request.basepath }}/assets/js/scripts.js"></script>
 
 
