--- a/src/SilexMarkdown/views/layout.html.twig
+++ b/src/SilexMarkdown/views/layout.html.twig
@@ -2,17 +2,26 @@
 <html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Bootstrap</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="A markdown-based website">
+        <meta name="author" content="A markdown writer">
+        <meta name="generator" content="SilexMarkdown">
 
         <title>{{ 'Homepage' }}</title>
-        <meta name="description" content="">
-        <meta name="author" content="">
 
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link href="{{ app.request.basepath }}/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="{{ app.request.basepath }}/assets/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+        <link href="{{ app.request.basepath }}/assets/css/styles.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="{{ app.request.basepath }}/assets/css/styles.css">
+        <!-- Le fav and touch icons -->
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ app.request.basepath }}/assets/ico/apple-touch-icon-144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ app.request.basepath }}/assets/ico/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ app.request.basepath }}/assets/ico/apple-touch-icon-72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="{{ app.request.basepath }}/assets/ico/apple-touch-icon-57-precomposed.png">
+        <link rel="shortcut icon" href="{{ app.request.basepath }}/assets/ico/favicon.png">
 
-        <script src="{{ app.request.basepath }}/js/libs/modernizr-2.0.6.min.js"></script>
+        <script src="{{ app.request.basepath }}/assets/modernizr/modernizr.js"></script>
     </head>
     <body>
         <div id="main-container">
@@ -36,10 +45,5 @@
         <script>window.jQuery || document.write('<script src="{{ app.request.basepath }}/assets/js/jquery.js/"><\/script>')</script>
         <script src="{{ app.request.basepath }}/assets/js/scripts.js"></script>
 
-
-        <!--[if lt IE 7 ]>
-            <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
-            <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
-        <![endif]-->
     </body>
 </html>
