--- a/src/SilexMarkdown/views/common/footer.html.twig
+++ b/src/SilexMarkdown/views/common/footer.html.twig
@@ -1,3 +1,10 @@
+<!-- Footer
+================================================== -->
 <footer>
-
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
 </footer>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ app.request.basepath }}/assets/js/jquery.js/"><\/script>')</script>
+<script src="{{ app.request.basepath }}/assets/js/scripts.js"></script>
+
