--- a/src/SilexMarkdown/views/layout.html.twig
+++ b/src/SilexMarkdown/views/layout.html.twig
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Bootstrap</title>
+        <title>{{ 'Homepage' }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A markdown-based website">
         <meta name="author" content="A markdown writer">
