--- a/src/SilexMarkdown/views/common/topbar.html.twig
+++ b/src/SilexMarkdown/views/common/topbar.html.twig
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="/">Home</a>
+            <a class="brand" href="/">~/</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
 {% for key, item in menu %}
