--- a/src/SilexMarkdown/views/layout.html.twig
+++ b/src/SilexMarkdown/views/layout.html.twig
@@ -8,7 +8,7 @@
         <meta name="author" content="A markdown writer">
         <meta name="generator" content="SilexMarkdown">
 
-        <title>{{ 'Homepage' }}</title>
+        <title>{{ title }}</title>
 
         <link href="{{ app.request.basepath }}/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ app.request.basepath }}/assets/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
