--- a/src/SilexMarkdown/views/common/topbar.html.twig
+++ b/src/SilexMarkdown/views/common/topbar.html.twig
@@ -4,25 +4,26 @@
 
 <!-- Navbar
 ================================================== -->
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="brand" href="/">~/</a>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
+<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">~/</a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
 {% for key, item in menu %}
-                    <li
-                        {% if current == key %}class="active"{% endif %}
-                    ><a href="/{{ key }}">{{ item }}</a></li>
+        <li {% if current == key %}class="active"{% endif %}>
+            <a href="/{{ key }}">{{ item }}</a>
+        </li>
 {% endfor %}
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</nav>
 
